[package]
name = "m6parserkit"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m6stack = { path = "../m6coll/m6stack" }
m6lexerkit = { path = "../m6lexerkit" }


[dependencies.proc_macros]
package = "m6parserkit-proc-macros"
path = "proc_macros"

[workspace]
members = [
    "proc_macros",
]
